manifests/horenso/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: horenso
  namespace: horenso
spec:
  endpointSelector:
    matchLabels:
      app: horenso
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: argocd-notifications-controller
            io.kubernetes.pod.namespace: argocd
        - matchLabels:
            claude-code: "true"
            io.kubernetes.pod.namespace: claude-code
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: shared-pg
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toFQDNs:
        - matchName: discord.com
        - matchPattern: "*.discord.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
